@@ -24,7 +24,7 @@ PyYAML supports the `YAML 1.1`_ standard, ``ruamel.yaml`` supports
 
 - YAML 1.2 dropped support for several features unquoted ``Yes``,
   ``No``, ``On``, ``Off``
-- YAML 1.2 no longer accepts strings that start with a ``0`` and solely 
+- YAML 1.2 no longer accepts strings that start with a ``0`` and solely
   consist of number characters as octal, you need to specify such strings with
   ``0o[0-7]+`` (zero + lower-case o for octal + one or more octal characters).
 - YAML 1.2 no longer supports `sexagesimals
@@ -45,24 +45,27 @@ PY2/PY3 reintegration
 ---------------------
 
 ``ruamel.yaml`` re-integrates the Python 2 and 3 sources, running on
-Python 2.6, 2.7 (CPython, PyPy), 3.3, 3.4, 3.5. It is more easy to
-extend and maintain as only a miniscule part of the code is version
-specific.
+Python 2.7 (CPython, PyPy), 3.3, 3.4, 3.5 (support for 2.6 has been
+dropped mid 2016). It is more easy to extend and maintain as only a
+miniscule part of the code is version specific.
 
 Fixes
 -----
 
 - ``ruamel.yaml`` follows the ``indent`` keyword argument on scalars
   when dumping.
+- ``ruamel.yaml`` allows ``:`` in plain scalars, as long as these are not
+  followed by a space (as per the specification)
+
 
 Testing
 -------
 
 ``ruamel.yaml`` is tested using `tox`_ and `py.test`_. In addition to
-new tests the original PyYAML
+new tests, the original PyYAML
 test framework is called from within ``tox`` runs.
 
 Before versions are pushed to PyPI, ``tox`` is invoked, and has to pass, on all
-Python versions, PyPI as well as flake8/pep8
+supported Python versions, on PyPI as well as flake8/pep8
 
 .. include:: links.rst
