@@ -16,8 +16,7 @@ from ruamel.yaml.nodes import (
     MappingNode, ScalarNode, SequenceNode,
 )
 
-import sys
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any, Dict, Optional, List  # NOQA
 
 __all__ = ['Composer', 'ComposerError']
