@@ -4,8 +4,7 @@ import warnings
 
 from ruamel.yaml.util import configobj_walker as new_configobj_walker
 
-import sys
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any  # NOQA
 
 
