@@ -2,8 +2,7 @@
 
 # Abstract classes.
 
-import sys
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any, Dict, Optional, List  # NOQA
 
 
