@@ -82,8 +82,7 @@ from ruamel.yaml.events import *                               # NOQA
 from ruamel.yaml.scanner import Scanner, RoundTripScanner, ScannerError      # NOQA
 from ruamel.yaml.compat import utf8                            # NOQA
 
-import sys
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any, Dict, Optional, List  # NOQA
 
 __all__ = ['Parser', 'RoundTripParser', 'ParserError']
