@@ -5,8 +5,7 @@ from __future__ import print_function, absolute_import, division, unicode_litera
 import datetime
 import copy
 
-import sys
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any, Dict, Optional, List  # NOQA
 
 
