@@ -6,11 +6,9 @@ some helper functions that might be generally useful
 
 from __future__ import absolute_import, print_function
 
-import sys
-
 from .compat import text_type, binary_type
 
-if sys.version_info >= (3, 5, 2):
+if False:  # MYPY
     from typing import Any, Dict, Optional, List, Text  # NOQA
     from .compat import StreamTextType  # NOQA
 
